--- a/src/app/components/includes/navbar/navbar.component.html
+++ b/src/app/components/includes/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="isMenu" id="mobile-nav" class="w-full xl:hidden h-full absolute z-40">
+@if (isMenu) {
+<div id="mobile-nav" class="w-full xl:hidden h-full absolute z-40">
     <div class="bg-gray-800 opacity-50 inset-0 fixed w-full h-full" (click)="isMenu=false"></div>
     <div
         class="w-64 absolute left-0 z-40 top-0 bg-white shadow flex-col justify-between transition duration-150 ease-in-out h-full">
@@ -68,6 +69,7 @@
         </div>
     </div>
 </div>
+}
 <!-- Mobile -->
 <nav class="w-full mx-auto bg-white shadow z-20 relative">
     <div class="justify-between container px-6 h-16 flex items-center lg:items-stretch mx-auto">
